Moved swixml to new launch plugin